# voice_sentiment_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: huggingface.yml  main.yml
conversations/: technology_1706560176_9889.txt  technology_1706560891_8799.txt  technology_1706561136_1664.txt  technology_1706561209_7276.txt
extra/: generate_audio.sh  script.aiff  script.txt
src/: generate_audio.py  generate_conversation.py  sentiment.py  summarization.py  transcribe.py
tests/: test_generate_audio.py  test_generate_conversation.py  test_sentiment.py  test_sentiments_and_topics.py  test_summarization.py  test_transcribe.py
