[tool.poetry]
name = "testing-sentiment"
version = "0.1.0"
description = "A simple repo to add testing to a AI app"
authors = ["Enrique Sanchez <je.sanchezb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
faster-whisper = "^0.10.0"
transformers = "^4.37.1"
gradio = "^4.16.0"
ruff = "^0.1.14"
torch = "^2.1.2"
langchain-experimental = "^0.0.49"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
